# watercolor

./: Cargo.toml  LICENSE  README.md
film/: Cargo.toml
film/src/: lib.rs
frame/: Cargo.toml
frame/src/: lib.rs
silent-film/: Cargo.toml
silent-film/src/: lib.rs
sound/: Cargo.toml
sound/src/: lib.rs
temporal/: Cargo.toml
temporal/src/: lib.rs
watercolor/: Cargo.toml
watercolor/src/: lib.rs
